@@ -1,19 +1,19 @@
 {
 	"graph_eq": {
-		"bands_0:15": "Bänder 0-15",
-		"bands_16:31": "Bänder 16-31",
+		"bands_1:16": "Bänder 1-16",
+		"bands_17:32": "Bänder 17-32",
 		"bands_l": "Bänder Links",
-		"bands_l_0:15": "Bänder Links 0-15",
-		"bands_l_16:31": "Bänder Links 16-31",
+		"bands_l_1:16": "Bänder Links 1-16",
+		"bands_l_17:32": "Bänder Links 17-32",
 		"bands_m": "Bänder Mitte",
-		"bands_m_0:15": "Bänder Mitte 0-15",
-		"bands_m_16:31": "Bänder Mitte 16-31",
+		"bands_m_1:16": "Bänder Mitte 1-16",
+		"bands_m_17:32": "Bänder Mitte 17-32",
 		"bands_r": "Bänder Rechts",
-		"bands_r_0:15": "Bänder Rechts 0-15",
-		"bands_r_16:31": "Bänder Rechts 16-31",
+		"bands_r_1:16": "Bänder Rechts 1-16",
+		"bands_r_17:32": "Bänder Rechts 17-32",
 		"bands_s": "Bänder Seite",
-		"bands_s_0:15": "Bänder Seite 0-15",
-		"bands_s_16:31": "Bänder Seite 16-31",
+		"bands_s_1:16": "Bänder Seite 1-16",
+		"bands_s_17:32": "Bänder Seite 17-32",
 		
 		"slope": {
 			"bt48": "BT48",
