@@ -1,19 +1,19 @@
 {
 	"graph_eq": {
-		"bands_0:15": "Bands 0-15",
-		"bands_16:31": "Bands 16-31",
+		"bands_1:16": "Bands 1-16",
+		"bands_17:32": "Bands 17-32",
 		"bands_l": "Bands Left",
-		"bands_l_0:15": "Bands Left 0-15",
-		"bands_l_16:31": "Bands Left 16-31",
+		"bands_l_1:16": "Bands Left 1-16",
+		"bands_l_17:32": "Bands Left 17-32",
 		"bands_m": "Bands Middle",
-		"bands_m_0:15": "Bands Middle 0-15",
-		"bands_m_16:31": "Bands Middle 16-31",
+		"bands_m_1:16": "Bands Middle 1-16",
+		"bands_m_17:32": "Bands Middle 17-32",
 		"bands_r": "Bands Right",
-		"bands_r_0:15": "Bands Right 0-15",
-		"bands_r_16:31": "Bands Right 16-31",
+		"bands_r_1:16": "Bands Right 1-16",
+		"bands_r_17:32": "Bands Right 17-32",
 		"bands_s": "Bands Side",
-		"bands_s_0:15": "Bands Side 0-15",
-		"bands_s_16:31": "Bands Side 16-31",
+		"bands_s_1:16": "Bands Side 1-16",
+		"bands_s_17:32": "Bands Side 17-32",
 		
 		"filter_info" : "{@filter}\n{@frequency%.2f} Hz\n{@gain%.2f} dB",
 		
