@@ -1,19 +1,19 @@
 {
 	"graph_eq": {
-		"bands_0:15": "Bandas 0-15",
-		"bands_16:31": "Bandas 16-31",
+		"bands_1:16": "Bandas 1-16",
+		"bands_17:32": "Bandas 17-32",
 		"bands_l": "Bandas Izquierda",
-		"bands_l_0:15": "Bandas Izquierda 0-15",
-		"bands_l_16:31": "Bandas Izquierda 16-31",
+		"bands_l_1:16": "Bandas Izquierda 1-16",
+		"bands_l_17:32": "Bandas Izquierda 17-32",
 		"bands_m": "Bandas Medio",
-		"bands_m_0:15": "Bandas Medio 0-15",
-		"bands_m_16:31": "Bandas Medio 16-31",
+		"bands_m_1:16": "Bandas Medio 1-16",
+		"bands_m_17:32": "Bandas Medio 17-32",
 		"bands_r": "Bandas Derecha",
-		"bands_r_0:15": "Bandas Derecha 0-15",
-		"bands_r_16:31": "Bandas Derecha 16-31",
+		"bands_r_1:16": "Bandas Derecha 1-16",
+		"bands_r_17:32": "Bandas Derecha 17-32",
 		"bands_s": "Bandas Lateral",
-		"bands_s_0:15": "Bandas Lateral 0-15",
-		"bands_s_16:31": "Bandas Lateral 16-31",
+		"bands_s_1:16": "Bandas Lateral 1-16",
+		"bands_s_17:32": "Bandas Lateral 17-32",
 		
 		"slope": {
 			"bt48": "BT48",
