@@ -1,19 +1,19 @@
 {
 	"graph_eq": {
-		"bands_0:15": "Bandes 0-15",
-		"bands_16:31": "Bandes 16-31",
+		"bands_1:16": "Bandes 1-16",
+		"bands_17:32": "Bandes 17-32",
 		"bands_l": "Bandes gauche",
-		"bands_l_0:15": "Bandes gauche 0-15",
-		"bands_l_16:31": "Bandes gauche 16-31",
+		"bands_l_1:16": "Bandes gauche 1-16",
+		"bands_l_17:32": "Bandes gauche 17-32",
 		"bands_m": "Bandes milieu",
-		"bands_m_0:15": "Bandes milieu 0-15",
-		"bands_m_16:31": "Bandes milieu 16-31",
+		"bands_m_1:16": "Bandes milieu 1-16",
+		"bands_m_17:32": "Bandes milieu 17-32",
 		"bands_r": "Bandes droite",
-		"bands_r_0:15": "Bandes droite 0-15",
-		"bands_r_16:31": "Bandes droite 16-31",
+		"bands_r_1:16": "Bandes droite 1-16",
+		"bands_r_17:32": "Bandes droite 17-32",
 		"bands_s": "Bandes côté",
-		"bands_s_0:15": "Bandes côté 0-15",
-		"bands_s_16:31": "Bandes côté 16-31",
+		"bands_s_1:16": "Bandes côté 1-16",
+		"bands_s_17:32": "Bandes côté 17-32",
 		
 		"slope": {
 			"bt48": "BT48",
