@@ -1,19 +1,19 @@
 {
 	"graph_eq": {
-		"bands_0:15": "Bande 0-15",
-		"bands_16:31": "Bande 16-31",
+		"bands_1:16": "Bande 1-16",
+		"bands_17:32": "Bande 17-32",
 		"bands_l": "Bande Sinistra",
-		"bands_l_0:15": "Bande Sinistra 0-15",
-		"bands_l_16:31": "Bande Sinistra 16-31",
+		"bands_l_1:16": "Bande Sinistra 1-16",
+		"bands_l_17:32": "Bande Sinistra 17-32",
 		"bands_m": "Bande Centro",
-		"bands_m_0:15": "Bande Centro 0-15",
-		"bands_m_16:31": "Bande Centro 16-31",
+		"bands_m_1:16": "Bande Centro 1-16",
+		"bands_m_17:32": "Bande Centro 17-32",
 		"bands_r": "Bande Destra",
-		"bands_r_0:15": "Bande Destra 0-15",
-		"bands_r_16:31": "Bande Destra 16-31",
+		"bands_r_1:16": "Bande Destra 1-16",
+		"bands_r_17:32": "Bande Destra 17-32",
 		"bands_s": "Bande Laterali",
-		"bands_s_0:15": "Bande Laterali 0-15",
-		"bands_s_16:31": "Bande Laterali 16-31",
+		"bands_s_1:16": "Bande Laterali 1-16",
+		"bands_s_17:32": "Bande Laterali 17-32",
 		
 		"slope": {
 			"bt48": "BT48",
