@@ -1,19 +1,19 @@
 {
 	"graph_eq": {
-		"bands_0:15": "Полосы 0-15",
-		"bands_16:31": "Полосы 16-31",
+		"bands_1:16": "Полосы 1-16",
+		"bands_17:32": "Полосы 17-32",
 		"bands_l": "Левый",
-		"bands_l_0:15": "Полосы 0-15 (левый)",
-		"bands_l_16:31": "Полосы 16-31 (левый)",
+		"bands_l_1:16": "Полосы 1-16 (левый)",
+		"bands_l_17:32": "Полосы 17-32 (левый)",
 		"bands_m": "Центр",
-		"bands_m_0:15": "Полосы 0-15 (центр)",
-		"bands_m_16:31": "Полосы 16-31 (центр)",
+		"bands_m_1:16": "Полосы 1-16 (центр)",
+		"bands_m_17:32": "Полосы 17-32 (центр)",
 		"bands_r": "Правый",
-		"bands_r_0:15": "Полосы 0-15 (правый)",
-		"bands_r_16:31": "Полосы 16-31 (правый)",
+		"bands_r_1:16": "Полосы 1-16 (правый)",
+		"bands_r_17:32": "Полосы 17-32 (правый)",
 		"bands_s": "Сторона",
-		"bands_s_0:15": "Полосы 0-15 (сторона)",
-		"bands_s_16:31": "Полосы 16-31 (сторона)",
+		"bands_s_1:16": "Полосы 1-16 (сторона)",
+		"bands_s_17:32": "Полосы 17-32 (сторона)",
 		
 		"filter_info" : "{@filter}\n{@frequency%.2f} Гц\n{@gain%.2f} дБ",		
 		
