@@ -89,26 +89,26 @@ namespace lsp
 
         static const port_item_t band_select_32[] =
         {
-            { "Bands 0-15",             "graph_eq.bands_0:15" },
-            { "Bands 16-31",            "graph_eq.bands_16:31" },
+            { "Bands 1-16",             "graph_eq.bands_1:16" },
+            { "Bands 17-32",            "graph_eq.bands_17:32" },
             { NULL, NULL }
         };
 
         static const port_item_t band_select_32lr[] =
         {
-            { "Bands Left 0-15",        "graph_eq.bands_l_0:15" },
-            { "Bands Right 0-15",       "graph_eq.bands_r_0:15" },
-            { "Bands Left 16-31",       "graph_eq.bands_l_16:31" },
-            { "Bands Right 16-31",      "graph_eq.bands_r_16:31" },
+            { "Bands Left 1-16",        "graph_eq.bands_l_1:16" },
+            { "Bands Right 1-16",       "graph_eq.bands_r_1:16" },
+            { "Bands Left 17-32",       "graph_eq.bands_l_17:32" },
+            { "Bands Right 17-32",      "graph_eq.bands_r_17:32" },
             { NULL, NULL }
         };
 
         static const port_item_t band_select_32ms[] =
         {
-            { "Bands Middle 0-15",      "graph_eq.bands_m_0:15" },
-            { "Bands Side 0-15",        "graph_eq.bands_s_0:15" },
-            { "Bands Middle 16-31",     "graph_eq.bands_m_16:31" },
-            { "Bands Side 16-31",       "graph_eq.bands_s_16:31" },
+            { "Bands Middle 1-16",      "graph_eq.bands_m_1:16" },
+            { "Bands Side 1-16",        "graph_eq.bands_s_1:16" },
+            { "Bands Middle 17-32",     "graph_eq.bands_m_17:32" },
+            { "Bands Side 17-32",       "graph_eq.bands_s_17:32" },
             { NULL, NULL }
         };
 
