@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.30 ===
+* Fixed band naming, counding bands from 1 instead of 0.
 * Added left/right and mid/side linking in the UI.
 * Updated build scripts and dependencies.
 
